# MARINAWebsite

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  PORT_CONFIGURATION.md  README.md  app.py  docker-compose.yml  pixi.toml  requirements.txt  restart.sh  start.sh
backend/: .env.example  .gitignore  Dockerfile  pixi.toml  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py
backend/src/api/: app.py
backend/src/api/middleware/: cors.py  error_handler.py  rate_limit.py  request_id.py  request_logging.py
backend/src/api/routes/: ablation.py  analyze.py  fingerprints.py  health.py  logs.py  models.py  predict.py  secondary_retrieval.py  smiles_search.py
backend/src/domain/: attention.py  const.py  data.py  encoder.py  inputs.py  model.py  model_session.py  predictor.py  ranker.py  settings.py
backend/src/domain/drawing/: __init__.py  draw.py
backend/src/domain/fingerprint/: __init__.py  fp_loader.py  fp_utils.py
backend/src/domain/models/: analysis_result.py  fingerprints.py  prediction_result.py  spectral_data.py
backend/src/services/: compute_pool.py  metadata_service.py  model_manifest.py  model_registry.py  model_service.py  molecule_renderer.py  request_log_store.py  result_builder.py  retrieval_helpers.py
backend/tests/: conftest.py  test_api_routes.py  test_core_refactor.py  test_model_registry.py  test_retrieval_helpers.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
nginx/: nginx.conf
old/: docker-compose.yml  pixi.toml
src/: config.py  (+11 more)
(+96 files in other folders)
